@@ -1,11 +1,22 @@
 package com.qa.arrays;
 
+import java.util.ArrayList;
+import java.util.LinkedList;
+import java.util.Scanner;
+
 public class Arrays {
 	
 	
 	public static void main(String[] args) {
-		
-		
+//		
+//		Scanner s = new Scanner(System.in);
+//		System.out.println("What is your name?");
+//		String name = s.nextLine();
+//		System.out.println("What is your age");
+//		int age = s.nextInt();
+//		System.out.println("Hi " + name + ", next year you will be " + (age + 1));
+//
+//		
 	
 //	
 //	int num[] = {1000,34,5};	
@@ -40,8 +51,8 @@ public class Arrays {
 //	System.out.println();
 //	}
 		
-	}
-	
+
+
 		
 	//array lists of Strings
 	//Best for searching
@@ -54,34 +65,39 @@ public class Arrays {
 //	daysOfWeek.add("sat");
 //	daysOfWeek.add("sun");
 //	
-//	//System.out.println(daysOfWeek.get(1));
+//	//System.out.println(daysOfWeek.get(0));
+//	
+//	
 //	
 //	for(int i =0; i<daysOfWeek.size();i++) {
 //		System.out.println(daysOfWeek.get(i));
 //	}
+//	
 //	daysOfWeek.remove("sun");
 //	daysOfWeek.remove(1);
 //	for(int i =0; i<daysOfWeek.size();i++) {
 //		System.out.println(daysOfWeek.get(i));
 //	}
-	//
+//	
+//}
 	
 //linked list 
 // best for adding and removing items
-//LinkedList<String> cars = new LinkedList<String>();
-//cars.add("Audi");
-//cars.add("BMW");
-//cars.add("SEAT");
-//cars.add("honda");
-//cars.add("Ford");
-//cars.remove(3);
-////	
-//System.out.println( cars);
-//
-//System.out.println(cars.removeFirst());
-//System.out.println(cars);
+LinkedList<String> cars = new LinkedList<String>();
+cars.add("Audi");
+cars.add("BMW");
+cars.add("SEAT");
+cars.add("honda");
+cars.add("Ford");
+cars.remove(0);
 //	
+System.out.println( cars);
+System.out.println( cars);
+System.out.println(cars.removeFirst());
+
+System.out.println(cars);
+	
 		
-//	}
+	}
 
 }
